@@ -19,6 +19,8 @@ People/companies who were/are contributing code to cocos2d for iPhone (alphabeti
 
 * CJ Hanson (myBuddyCJ) (http://www.hansoninteractive.com/):
 	Director: Fixed the initial flicker + correct size at startup
+	Director: onExitTransitionDidFinish when the director is ended and other "corner" cases.
+	LabelBMFont: If the character is not supported, logs a warning
 
 * Goffredo Marocchi (https://github.com/panajev):
 	LabelBMFont: removed forward declarations for tFontDefHashElement and tKerningHashElement. They are in the header now.
